syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package LambdaInvocation;

service Greeter {
  rpc RetrieveLogs (LambdaInvokeRequest) returns (LambdaInvokeReply) {}
}

message LambdaInvokeRequest {
  string timestamp = 1;
  string dt = 2;
}

message LambdaInvokeReply {
  string result = 1;
}